# smart-shape

./: README.md  pyproject.toml
src/smart_shape/: __init__.py
src/smart_shape/config/: app_config.yml
src/smart_shape/core/callbacks/: callback_container.py
src/smart_shape/core/objectBuilder/: object_builder.py
src/smart_shape/core/shapes/: basic_shape.py  composite_shape.py
src/smart_shape/gui/: main_gui.py
src/smart_shape/gui/ui/: smart_shape_main_window.ui
src/smart_shape/gui/ui/icons/icons_n/: descr.py  resource_icon_n.qrc
src/smart_shape/gui/ui/icons/icons_r/: resource_icon_r.qrc
src/smart_shape/gui/widgets/: camera_viewer.py  context_menu_actions.py  parameter_tree.py  shape_viewer_widget.py  shape_viewer_widget_control.py
src/smart_shape/res/shape_meta_data/: viewer_case_1.yaml  viewer_model.yaml  viewer_model_free.yaml  viewer_model_free_align_demo.yaml
src/smart_shape/util/: geometry_transformation.py  util.py
